feat: extra-driver-license

--- a/index.html
+++ b/index.html
@@ -22,7 +22,32 @@
 
         <section class="active_false">
         </section>
-    </section>
+        <section class="drive_license">
+            <span class="drive_title">
+                <h2>Utenti Patentati</h2>
+            </span>
+
+            <div class="less_10">
+                <section class="title_less_10">
+                    <h3>Patentati da meno di 10 anni</h3>
+                </section>
+                <section class="x_less_10"></section>
+            </div>
+
+            <div class="less_20">
+                <section class="title_more_10_less_20">
+                    <h3>Patentati da meno di 20 anni</h3>
+                </section>
+                <section class="more_10_x_less_20"></section>
+            </div>
+
+            <div class="more_20">
+                <section class="title_more_20">
+                    <h3>Patentati da più di 20 anni</h3>
+                </section>
+                <section class="x_more_20"></section>
+            </div>
+        </section>
     </section>
     <script src="./script.js"></script>
 </body>
