feat: extra-modal

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 
 <body>
+    <div class="modal_wrapper">
+        <section class="modal">
+        </section>
+    </div>
     <section class="app_archive">
         <header class="main_title">
             <h1>ARCHIVE</h1>
@@ -27,26 +31,26 @@
                 <h2>Utenti Patentati</h2>
             </span>
 
-            <div class="less_10">
+            <section class="less_10">
                 <section class="title_less_10">
                     <h3>Patentati da meno di 10 anni</h3>
                 </section>
                 <section class="x_less_10"></section>
-            </div>
+            </section>
 
-            <div class="less_20">
+            <section class="less_20">
                 <section class="title_more_10_less_20">
                     <h3>Patentati da meno di 20 anni</h3>
                 </section>
                 <section class="more_10_x_less_20"></section>
-            </div>
+            </section>
 
-            <div class="more_20">
+            <section class="more_20">
                 <section class="title_more_20">
                     <h3>Patentati da più di 20 anni</h3>
                 </section>
                 <section class="x_more_20"></section>
-            </div>
+            </section>
         </section>
     </section>
     <script src="./script.js"></script>
